# paper-bundling-analysis

./: .gitignore  README.md  pyproject.toml
data/: README.md
docs/: cli_scripts_guide.md  gurobi_setup_log.md  multi_pc_git_python_notes.md  remote_gurobi_setup.md
notes/: 20251208_code_findings.md  closed_form_expected_contracts.md  code_migration.md  districting_figures.md  figure2_fit_recovery.md  midterm_diff_triage.md  numerical_results_inventory.md  pre_git_migration_inventory.md  procurement_bundling_issues.md  source_materials_inventory.md  step3_refactoring.md  workflow_consultation.md
outputs/: README.md
paper/: C000185_広域連携による橋梁群の維持管理最適化に向けた地域分割と集約効果の定量分析.docx  draft_introduction.md  improvement_roadmap.md  issues.md  manuscript_design.md  methodology.md  objective_design.md  outline.md  results.md  results_plan.md
prompts/: ai_working_policy.md
references/: README.md  area_management_survey_report.docx  area_management_survey_report_v2.docx  qiao2026_review.md  論文化に向けた論点_追加スライド  -  修復済み.pptx
scripts/: extract_pdf_text.py  generate_expected_contracts.py  make_all_figures.py  make_districting_maps.py  make_transition_counts.py  parallel_contracts.py  plot_districting_map.py  plot_dm_sensitivity.py  plot_expected_contracts_svg.py  plot_inspection_interval.py  plot_optimization_results.py  plot_region_breakdown.py  plot_study_area_map.py  reevaluate_optimization_objectives.py  run_gurobi_districting.py  step3_build_distance_matrix.py  step3_compare_and_report.py  step3_extract_rc_bridges.py  step3_filter_target_municipalities.py  step3_run_emarkov.py  (+1 more)
(+62 files in other folders)
